// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditScanConfigDialog component tests should render dialog 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37 {
  margin-left: -5px;
}

.c37 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c37 > * {
  margin-left: 5px;
}

.c36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c25 {
  cursor: pointer;
}

.c26 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c26 * {
  height: inherit;
  width: inherit;
}

.c27 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c44 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  display: none;
  height: 0;
}

.c19 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #c8d3d9;
  position: relative;
}

.c20 {
  margin: 0 0 1px 0;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c23 {
  word-break: break-all;
  min-width: 100px;
}

.c24 {
  margin-left: 3px;
  margin-top: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c56 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c55 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5:hover {
  color: #fff;
  background: #519032;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c52 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c52:focus,
.c52:hover {
  border: 1px solid #393637;
}

.c52:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c52[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c52 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c52:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c54 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c54:hover {
  color: #fff;
  background: #519032;
}

.c51 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c17 {
  color: #a94442;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c29 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c29 th,
.c29 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c29 tfoot tr {
  background: #fff;
}

.c29 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c46 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: fixed;
  width: 100%;
}

.c46 th,
.c46 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c46 tfoot tr {
  background: #fff;
}

.c46 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c30 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c30 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c31 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
}

.c32 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 9em;
}

.c47 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 30%;
}

.c48 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
  width: 10%;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: normal;
  cursor: pointer;
}

.c39 {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  margin: 0;
  margin-left: 10px;
  line-height: normal;
  width: auto;
  height: auto;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c49 {
  overflow-wrap: break-word;
}

@media print {
  .c25 {
    display: none;
  }
}

@media print {
  .c29 {
    border-collapse: collapse;
  }
}

@media screen {
  .c29 > tbody:nth-of-type(even),
  .c29 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c29 > tbody:not(:only-of-type):hover,
  .c29 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c46 {
    border-collapse: collapse;
  }
}

@media screen {
  .c46 > tbody:nth-of-type(even),
  .c46 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c46 > tbody:not(:only-of-type):hover,
  .c46 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c30 {
    border-bottom: 1px solid black;
  }

  .c30 a,
  .c30 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c31 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c32 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c47 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

@media print {
  .c48 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <section>
                    <div
                      class="c18 c19 section-header"
                    >
                      <h2
                        class="c20 c21"
                      >
                        <div
                          class="c22 c23"
                        >
                          Edit Network Vulnerability Test Families (4)
                        </div>
                      </h2>
                      <div
                        class="c3"
                      >
                        <div
                          class="c13 c24"
                        >
                          <span
                            class="c25 c26 section-fold-icon"
                            data-testid="svg-icon"
                            title="Fold"
                          >
                            <svg
                              title="Fold"
                            >
                              unfold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c27"
                    >
                      <div
                        class="c28"
                      >
                        <table
                          class="c29"
                        >
                          <thead
                            class="c30"
                          >
                            <tr>
                              <th
                                class="c31"
                              >
                                <div
                                  class="c13"
                                >
                                  Family
                                </div>
                              </th>
                              <th
                                class="c31"
                              >
                                <div
                                  class="c13"
                                >
                                  NVTs selected
                                </div>
                              </th>
                              <th
                                class="c31"
                              >
                                <div
                                  class="c13"
                                >
                                  Trend
                                </div>
                              </th>
                              <th
                                class="c32"
                              >
                                <div
                                  class="c13"
                                >
                                  Select all NVTs
                                </div>
                              </th>
                              <th
                                class="c31"
                              >
                                <div
                                  class="c33"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c34"
                                >
                                  1 of 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c35"
                                >
                                  <div
                                    class="c13 c36"
                                  >
                                    <div
                                      class="c13 c37"
                                      margin="5px"
                                    >
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c41"
                                >
                                  <label
                                    class="c38"
                                  >
                                    <div
                                      class="c13 c36"
                                    >
                                      <div
                                        class="c13 c37"
                                        margin="5px"
                                      >
                                        <input
                                          checked=""
                                          class="c39 c42"
                                          name="family1"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <span
                                    class="c25 c26"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c34"
                                >
                                  2 of 4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c35"
                                >
                                  <div
                                    class="c13 c36"
                                  >
                                    <div
                                      class="c13 c37"
                                      margin="5px"
                                    >
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c41"
                                >
                                  <label
                                    class="c38"
                                  >
                                    <div
                                      class="c13 c36"
                                    >
                                      <div
                                        class="c13 c37"
                                        margin="5px"
                                      >
                                        <input
                                          class="c39 c42"
                                          name="family2"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <span
                                    class="c25 c26"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c34"
                                >
                                  0 of 2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c35"
                                >
                                  <div
                                    class="c13 c36"
                                  >
                                    <div
                                      class="c13 c37"
                                      margin="5px"
                                    >
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c41"
                                >
                                  <label
                                    class="c38"
                                  >
                                    <div
                                      class="c13 c36"
                                    >
                                      <div
                                        class="c13 c37"
                                        margin="5px"
                                      >
                                        <input
                                          class="c39 c42"
                                          name="family3"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <span
                                    class="c25 c26"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c34"
                                >
                                  0 of 6
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c35"
                                >
                                  <div
                                    class="c13 c36"
                                  >
                                    <div
                                      class="c13 c37"
                                      margin="5px"
                                    >
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c38"
                                      >
                                        <div
                                          class="c13 c36"
                                        >
                                          <div
                                            class="c13 c37"
                                            margin="5px"
                                          >
                                            <input
                                              checked=""
                                              class="c39 c40"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c26"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c41"
                                >
                                  <label
                                    class="c38"
                                  >
                                    <div
                                      class="c13 c36"
                                    >
                                      <div
                                        class="c13 c37"
                                        margin="5px"
                                      >
                                        <input
                                          class="c39 c42"
                                          name="family4"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <span
                                    class="c25 c26"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="c18 c19 section-header"
                    >
                      <h2
                        class="c20 c21"
                      >
                        <div
                          class="c22 c23"
                        >
                          Edit Scanner Preferences (1)
                        </div>
                      </h2>
                      <div
                        class="c3"
                      >
                        <div
                          class="c13 c24"
                        >
                          <span
                            class="c25 c26 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c44"
                    >
                      <div
                        class="c28"
                      >
                        <table
                          class="c29"
                        >
                          <thead
                            class="c30"
                          >
                            <tr>
                              <th
                                class="c31"
                              >
                                <div
                                  class="c13"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c31"
                              >
                                <div
                                  class="c13"
                                >
                                  New Value
                                </div>
                              </th>
                              <th
                                class="c31"
                              >
                                <div
                                  class="c13"
                                >
                                  Default Value
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  Scanner Preference 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c10"
                                >
                                  <input
                                    class="c15 c45"
                                    name="scannerpref0"
                                    type="text"
                                    value="0"
                                  />
                                  <div
                                    class="c17"
                                    data-testid="error-marker"
                                  >
                                    ×
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c10"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="c18 c19 section-header"
                    >
                      <h2
                        class="c20 c21"
                      >
                        <div
                          class="c22 c23"
                        >
                          Network Vulnerability Test Preferences (3)
                        </div>
                      </h2>
                      <div
                        class="c3"
                      >
                        <div
                          class="c13 c24"
                        >
                          <span
                            class="c25 c26 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c44"
                    >
                      <div
                        class="c28"
                      >
                        <table
                          class="c46"
                        >
                          <thead
                            class="c30"
                          >
                            <tr>
                              <th
                                class="c47"
                              >
                                <div
                                  class="c13"
                                >
                                  NVT
                                </div>
                              </th>
                              <th
                                class="c47"
                              >
                                <div
                                  class="c13"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c47"
                              >
                                <div
                                  class="c13"
                                >
                                  Value
                                </div>
                              </th>
                              <th
                                class="c48"
                              >
                                <div
                                  class="c33"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  preference0
                                </div>
                              </td>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <span
                                    class="c25 c26"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <span
                                    class="c25 c26"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  preference
                                </div>
                              </td>
                              <td
                                class="c49"
                              >
                                <div
                                  class="c10"
                                >
                                  5
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <span
                                    class="c25 c26"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c50 c51"
            >
              <button
                class="c52 c53 c54"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c52 c53 c54"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c55"
          >
            <div
              class="c56"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditScanConfigDialog component tests should render dialog for config in use 1`] = `
<body>
  <div
    id="portals"
  >
    .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c24 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c23 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5:hover {
  color: #fff;
  background: #519032;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c20 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c20:focus,
.c20:hover {
  border: 1px solid #393637;
}

.c20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c20[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c20 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c20:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c22:hover {
  color: #fff;
  background: #519032;
}

.c19 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c17 {
  color: #a94442;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c18 c19"
            >
              <button
                class="c20 c21 c22"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c20 c21 c22"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c23"
          >
            <div
              class="c24"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditScanConfigDialog component tests should render dialog for osp config 1`] = `
<body>
  <div
    id="portals"
  >
    .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 {
  cursor: pointer;
}

.c33 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c33 * {
  height: inherit;
  width: inherit;
}

.c34 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  display: none;
  height: 0;
}

.c26 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #c8d3d9;
  position: relative;
}

.c27 {
  margin: 0 0 1px 0;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c30 {
  word-break: break-all;
  min-width: 100px;
}

.c31 {
  margin-left: 3px;
  margin-top: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102,102,102,0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c46 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c45 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient( -45deg, transparent, transparent 2px, #000 2px, #000 3px );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #787878;
  border-radius: 3px;
  border: 1px solid #787878;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #519032;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #519032;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5:hover {
  color: #fff;
  background: #519032;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c42 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c42:focus,
.c42:hover {
  border: 1px solid #393637;
}

.c42:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c42[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c42 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c42:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c44 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c44:hover {
  color: #fff;
  background: #519032;
}

.c41 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #787878;
  color: #fff;
  font-weight: bold;
  background: #66c430;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c23 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  margin: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c24 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c24 * {
  height: inherit;
  width: inherit;
}

.c20 {
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 1px 5px;
  background-color: #fff;
  color: #000;
  font-weight: normal;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 180px;
}

.c17 {
  color: #a94442;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  word-break: keep-all;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  cursor: default;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c36 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c36 th,
.c36 td {
  padding: 4px 10px;
  border-bottom: 1px solid #c8d3d9;
}

.c36 tfoot tr {
  background: #fff;
}

.c36 tfoot tr td {
  border-bottom: 1px solid #c8d3d9;
}

.c37 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c37 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c38 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #c8d3d9;
  font-weight: bold;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #393637;
  background-color: #fff;
  background-image: none;
  border: 1px solid #aaaaaa;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media print {
  .c32 {
    display: none;
  }
}

@media print {
  .c36 {
    border-collapse: collapse;
  }
}

@media screen {
  .c36 > tbody:nth-of-type(even),
  .c36 > tbody:only-of-type > tr:nth-of-type(even) {
    background: #eeeeee;
  }

  .c36 > tbody:not(:only-of-type):hover,
  .c36 > tbody:only-of-type > tr:hover {
    background: #c8d3d9;
  }
}

@media print {
  .c37 {
    border-bottom: 1px solid black;
  }

  .c37 a,
  .c37 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c38 {
    color: #000;
    font-size: 1.2em;
    background-color: none;
    font-weight: bold;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Scanner
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                      size="10"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-0-label"
                        class="c18"
                        role="combobox"
                      >
                        <div
                          class="c19"
                          width="180px"
                        >
                          <div
                            aria-haspopup="true"
                            aria-label="open menu"
                            class="c20"
                            data-toggle="true"
                            role="button"
                            type="button"
                          >
                            <div
                              class="c21"
                              data-testid="select-selected-value"
                              title="scanner1"
                            >
                              scanner1
                            </div>
                            <div
                              class="c22"
                            >
                              <span
                                class="c23 c24"
                                data-testid="select-open-button"
                              >
                                ▼
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="c17"
                          data-testid="error-marker"
                        >
                          ×
                        </div>
                      </div>
                    </div>
                  </div>
                  <section>
                    <div
                      class="c25 c26 section-header"
                    >
                      <h2
                        class="c27 c28"
                      >
                        <div
                          class="c29 c30"
                        >
                          Edit Scanner Preferences (1)
                        </div>
                      </h2>
                      <div
                        class="c3"
                      >
                        <div
                          class="c13 c31"
                        >
                          <span
                            class="c32 c33 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c34"
                    >
                      <div
                        class="c35"
                      >
                        <table
                          class="c36"
                        >
                          <thead
                            class="c37"
                          >
                            <tr>
                              <th
                                class="c38"
                              >
                                <div
                                  class="c13"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c38"
                              >
                                <div
                                  class="c13"
                                >
                                  New Value
                                </div>
                              </th>
                              <th
                                class="c38"
                              >
                                <div
                                  class="c13"
                                >
                                  Default Value
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  Scanner Preference 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c10"
                                >
                                  <input
                                    class="c15 c39"
                                    name="scannerpref0"
                                    type="text"
                                    value="0"
                                  />
                                  <div
                                    class="c17"
                                    data-testid="error-marker"
                                  >
                                    ×
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c10"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c40 c41"
            >
              <button
                class="c42 c43 c44"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c42 c43 c44"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c45"
          >
            <div
              class="c46"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
